--- a/index.html
+++ b/index.html
@@ -4,10 +4,77 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/R_Logo-02.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>REGIRE</title>
+    <title>REGIRE | Connecting Startups with Top Influencers</title>
+    <meta
+      name="description"
+      content="Regire connects promising consumer startups and web3 projects with major influencers and top KOLs, offering creators access to the best vetted opportunities."
+    />
+    <meta
+      name="keywords"
+      content="Regire, startups, influencers, KOLs, web3, consumer startups, creator economy"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.regire.com/" />
+    <meta
+      property="og:title"
+      content="REGIRE | Strategic Network for Startups and Influencers"
+    />
+    <meta
+      property="og:description"
+      content="Regire connects promising consumer startups and web3 projects with major influencers and top KOLs, while offering creators access to the best vetted opportunities."
+    />
+    <meta property="og:image" content="https://www.regire.com/og-image.jpg" />
+
+    <!-- Twitter/x -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.regire.com/" />
+    <meta
+      property="x:title"
+      content="REGIRE | Strategic Network for Startups and Influencers"
+    />
+    <meta
+      property="x:description"
+      content="Regire connects promising consumer startups and web3 projects with major influencers and top KOLs, while offering creators access to the best vetted opportunities."
+    />
+    <meta
+      property="x:image"
+      content="https://www.regire.com/twitter-image.jpg"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.regire.com/" />
+
+    <!-- Preconnect to important third-party origins -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "REGIRE",
+        "url": "https://www.regire.com",
+        "logo": "https://www.regire.com/R_Logo-02.png",
+        "description": "Regire connects promising consumer startups and web3 projects with major influencers and top KOLs, while offering creators access to the best vetted opportunities.",
+        "sameAs": [
+          <!-- "https://www.linkedin.com/company/regire",
+          "https://twitter.com/regire_official" -->
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Google Analytics or your preferred analytics script -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR-GA-ID"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'YOUR-GA-ID');
+    </script> -->
   </body>
 </html>
